Add config infrastructure #9
Also implements reading ELASTIC_APM_SERVER_URLS environment variable

--- a/src/Agent.Core/Agent.Core.csproj
+++ b/src/Agent.Core/Agent.Core.csproj
@@ -9,6 +9,7 @@
     <Folder Include="DiagnosticSource\" />
     <Folder Include="DiagnosticListeners\" />
     <Folder Include="Logging\" />
+    <Folder Include="Config\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
