Add reading agent configs from IConfiguration #9
To nicely integrate with ASP.NET Core this change adds support for reading agent configs through Microsoft.Extensions.Configuration.IConfiguration.

With this change the agent also reads configs e.g. from the appsettings.json file.

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*"//,
+  //Settings for the elastic APM Agent
+  //"ElasticApm":
+  //  {
+  //    "LogLevel":  "Debug",
+  //    "ServerUrls":  "myServer"
+  //  }
 }
