Capture errors in ASP.NET Core #12
-Adds infrastructure to capture errors
-Based on DiagnosticSource events it captures errors in ASP.NET Core apps

--- a/src/Elastic.Apm.AspNetCore/Elastic.Apm.AspNetCore.csproj
+++ b/src/Elastic.Apm.AspNetCore/Elastic.Apm.AspNetCore.csproj
@@ -16,5 +16,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Config\" />
+    <Folder Include="DiagnosticListener\" />
   </ItemGroup>
 </Project>
