Capture errors for outgoing HTTP calls #12
This adds support for capturing outgoing HTTP calls with HttpClient.

--- a/src/Elastic.Apm/Elastic.Apm.csproj
+++ b/src/Elastic.Apm/Elastic.Apm.csproj
@@ -11,6 +11,7 @@
     <Folder Include="DiagnosticListeners\" />
     <Folder Include="Logging\" />
     <Folder Include="Config\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
