Public API - WIP #26

--- a/src/Elastic.Apm/Elastic.Apm.csproj
+++ b/src/Elastic.Apm/Elastic.Apm.csproj
@@ -12,6 +12,7 @@
     <Folder Include="Logging\" />
     <Folder Include="Config\" />
     <Folder Include="Helpers\" />
+    <Folder Include="Api\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
