tune codecov config

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,23 @@
+coverage:
+  range: 70..100
+  round: down
+  precision: 2
+  # https://docs.codecov.io/docs/commit-status#section-project-status
+  status:
+    project:                   # measuring the overall project coverage
+      default:                 # context, you can create multiple ones with custom titles
+        enabled: yes           # must be yes|true to enable this status
+        target: 70             # specify the target coverage for each commit status
+                               #   option: "auto" (must increase from parent commit or pull request base)
+                               #   option: "X%" a static target percentage to hit
+        threshold: null        # allowed to drop X% and still result in a "success" commit status
+        if_not_found: success  # if parent is not found report status as success, error, or failure
+        if_ci_failed: error    # if ci fails report status as success, error, or failure
+        base: parent           # will always use the parent commit to compare against.
+    # https://docs.codecov.io/docs/commit-status#section-patch-status
+    patch: off
+comment:
+  require_changes: yes
 ignore:
   - "test"
   - "sample"
-  
