ASP.NET Core: automatically subscribe to HTTP and EFCore
In order to make the API more simple we autosubscribe to outgoing HTTP calls and EFCore calls.

Also added 2 tests to test non-ASP.NET Core scenarios + HttpDiagnosticsSubscriber registration.

--- a/src/Elastic.Apm.AspNetCore/Elastic.Apm.AspNetCore.csproj
+++ b/src/Elastic.Apm.AspNetCore/Elastic.Apm.AspNetCore.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Elastic.Apm.EntityFrameworkCore\Elastic.Apm.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
   </ItemGroup>
   <ItemGroup>
