--- a/src/Elastic.Apm.EntityFrameworkCore/Elastic.Apm.EntityFrameworkCore.csproj
+++ b/src/Elastic.Apm.EntityFrameworkCore/Elastic.Apm.EntityFrameworkCore.csproj
@@ -5,6 +5,7 @@
     <AssemblyName>Elastic.Apm.EntityFrameworkCore</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\elasticapm.snk</AssemblyOriginatorKeyFile>
+    <AssemblyVersion>0.0.1.0</AssemblyVersion>
     <DelaySign>false</DelaySign>
   </PropertyGroup>
 
