Fix null logger in AbstractConfigurationReader
Also added tests.

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -6,9 +6,9 @@
   },
   "AllowedHosts": "*"//,
   //Settings for the elastic APM Agent
-  //"ElasticApm":
-  //  {
-  //    "LogLevel":  "Debug",
-  //    "ServerUrls":  "myServer"
-  //  }
+//  "ElasticApm":
+//    {
+//      "LogLevel":  "Debug",
+//      "ServerUrls":  "http://localhost:8200"
+//    }
 }
