--- a/src/Elastic.Apm.AspNetCore/Elastic.Apm.AspNetCore.csproj
+++ b/src/Elastic.Apm.AspNetCore/Elastic.Apm.AspNetCore.csproj
@@ -2,23 +2,34 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Elastic.Apm.AspNetCore</AssemblyName>
+    <AssemblyVersion>0.0.1.0</AssemblyVersion>
     <RootNamespace>Elastic.Apm.AspNetCore</RootNamespace>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\..\elasticapm.snk</AssemblyOriginatorKeyFile>
-    <AssemblyVersion>0.0.1.0</AssemblyVersion>
+    <AssemblyOriginatorKeyFile>..\..\build\elasticapm.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
+    <PackageVersion>0.0.1.0</PackageVersion>
+    <authors>Elastic and contributors</authors>
+    <owners>Elastic</owners>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <PackageId>Elastic.Apm.AspNetCore</PackageId>
+    <copyright>2019 Elasticsearch BV</copyright>
+    <PackageLicenseUrl>https://github.com/elastic/apm-agent-dotnet/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/elastic/apm-agent-dotnet</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/elastic/apm-agent-dotnet/master/build/nuget-icon.png</PackageIconUrl>
+    <Description>Elastic APM for ASP.NET Core. This package contains auto instrumentation for ASP.NET Core. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Description>
+    <Summary>Elastic APM for ASP.NET Core. This package contains auto instrumentation for ASP.NET Core. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Summary>
+    <PackageTags>apm, monitoring, elastic, elasticapm, analytics, aspnetcore</PackageTags>
   </PropertyGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
+    <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj"/>
   </ItemGroup>
   <ItemGroup>
     <!-- We should probably lower the version number -->
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0"/>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Config\" />
-    <Folder Include="DiagnosticListener\" />
+    <Folder Include="Config\"/>
+    <Folder Include="DiagnosticListener\"/>
   </ItemGroup>
 </Project>
