--- a/src/Elastic.Apm.All/Elastic.Apm.All.csproj
+++ b/src/Elastic.Apm.All/Elastic.Apm.All.csproj
@@ -1,16 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
-<PropertyGroup>
-  <TargetFramework>netstandard2.0</TargetFramework>
-  <AssemblyName>Elastic.Apm.All</AssemblyName>
-  <RootNamespace>Elastic.Apm.All</RootNamespace>
-  <SignAssembly>true</SignAssembly>
-  <AssemblyOriginatorKeyFile>..\..\elasticapm.snk</AssemblyOriginatorKeyFile>
-  <DelaySign>false</DelaySign>
-</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Elastic.Apm.All</AssemblyName>
+    <RootNamespace>Elastic.Apm.All</RootNamespace>
+    <AssemblyVersion>0.0.1.0</AssemblyVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\build\elasticapm.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>false</DelaySign>
+    <PackageVersion>0.0.1.0</PackageVersion>
+    <authors>Elastic and contributors</authors>
+    <owners>Elastic</owners>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <PackageId>Elastic.Apm.All</PackageId>
+    <copyright>2019 Elasticsearch BV</copyright>
+    <PackageLicenseUrl>https://github.com/elastic/apm-agent-dotnet/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/elastic/apm-agent-dotnet</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/elastic/apm-agent-dotnet/master/build/nuget-icon.png</PackageIconUrl>
+    <Description>Elastic APM .NET agent. This is a convenient package that automatically pulls in ASP.NET Core, and Entity Framework Core auto instrumentation with the Elastic APM .NET Agent. If your application uses the Microsoft.AspNetCore.All package the easiest way to reference the Elastic APM project is to use this package. If you only need specific functionalities (e.g. EF Core monitoring, or ASP.NET Core without EF Core monitoring, etc) you can reference specific Elastic.Apm packages. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Description>
+    <Summary>Elastic APM .NET agent. This is a convenient package that automatically pulls in ASP.NET Core, and Entity Framework Core auto instrumentation with the Elastic APM .NET Agent. If your application uses the Microsoft.AspNetCore.All package the easiest way to reference the Elastic APM project is to use this package. If you only need specific functionalities (e.g. EF Core monitoring, or ASP.NET Core without EF Core monitoring, etc) you can reference specific Elastic.Apm packages. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Summary>
+    <PackageTags>apm, monitoring, elastic, elasticapm, analytics, aspnetcore, entiryframeworkcore, efcore</PackageTags>
+  </PropertyGroup>
 
-<ItemGroup>
-  <ProjectReference Include="..\Elastic.Apm.AspNetCore\Elastic.Apm.AspNetCore.csproj" />
-  <ProjectReference Include="..\Elastic.Apm.EntityFrameworkCore\Elastic.Apm.EntityFrameworkCore.csproj" />
-  <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
-</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Elastic.Apm.AspNetCore\Elastic.Apm.AspNetCore.csproj"/>
+    <ProjectReference Include="..\Elastic.Apm.EntityFrameworkCore\Elastic.Apm.EntityFrameworkCore.csproj"/>
+    <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj"/>
+  </ItemGroup>
 </Project>
