--- a/sample/AspNetFullFrameworkSampleApp/Web.config
+++ b/sample/AspNetFullFrameworkSampleApp/Web.config
@@ -267,7 +267,7 @@
   </runtime>
   <system.webServer>
     <modules>
-      <add name="AspNetFullFrameworkSampleApp" type="AspNetFullFrameworkSampleApp.MyModule1"/>
+      <add name="AspNetFullFrameworkSampleApp" type="AspNetFullFrameworkSampleApp.ElasticApmModule"/>
       <remove name="TelemetryCorrelationHttpModule"/>
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler"/>
       <remove name="ApplicationInsightsWebTracking"/>
