Distributed tracing - WIP

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -4,11 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"//,
-  //Settings for the elastic APM Agent
-//  "ElasticApm":
-//    {
-//      "LogLevel":  "Debug",
-//      "ServerUrls":  "http://localhost:8200"
-//    }
+  "AllowedHosts": "*",
+ // Settings for the elastic APM Agent
+  "ElasticApm":
+    {
+      "LogLevel":  "Debug",
+      "ServerUrls":  "http://localhost:8200"
+    }
 }
