--- a/sample/WebApiSample/appsettings.json
+++ b/sample/WebApiSample/appsettings.json
@@ -4,11 +4,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
+  //,
   // Settings for the elastic APM Agent
-  "ElasticApm":
-  {
-    "LogLevel":  "Debug",
-    "ServerUrls":  "http://localhost:8200"
-  }
+  //  "ElasticApm":
+  //  {
+  //    "LogLevel":  "Debug",
+  //    "ServerUrls":  "http://localhost:8200"
+  //  }
 }
