Update appsettings.json files
Comments are not part of JSON, so removed those.

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -4,12 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
-  //,
-  // Settings for the elastic APM Agent
-  //  "ElasticApm":
-  //    {
-  //      "LogLevel":  "Debug",
-  //      "ServerUrls":  "http://localhost:8200"
-  //    }
+  "AllowedHosts": "*",
+  "ElasticApm": {
+    "LogLevel": "Error",
+    "ServerUrls": "http://localhost:8200"
+  }
 }
