Initial implementation with just NonsampledDistributedTraceAcross2Service test

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -8,6 +8,6 @@
   "ElasticApm": {
     "LogLevel": "Error",
     "ServerUrls": "http://localhost:8200",
-    "ServerUrls": "http://localhost:8200"
+    "TransactionSampleRate": 1.0
   }
 }
