--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -7,6 +7,7 @@
   "AllowedHosts": "*",
   "ElasticApm": {
     "LogLevel": "Error",
-    "ServerUrls": "http://localhost:8200"
+    "ServerUrls": "http://localhost:8200",
+    "TransactionSampleRate": 1.0
   }
 }
