--- a/sample/AspNetFullFrameworkSampleApp/Web.config
+++ b/sample/AspNetFullFrameworkSampleApp/Web.config
@@ -268,7 +268,7 @@
   </runtime>
   <system.webServer>
     <modules>
-      <add name="AspNetFullFrameworkSampleApp" type="AspNetFullFrameworkSampleApp.ElasticApmModule" />
+      <add name="ElasticApmModule" type="Elastic.Apm.AspNetFullFramework.ElasticApmModule" />
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler" />
       <remove name="ApplicationInsightsWebTracking" />
