Added unit test helper to write Agent log to Xunit output

--- a/test/Elastic.Apm.Tests/Elastic.Apm.Tests.csproj
+++ b/test/Elastic.Apm.Tests/Elastic.Apm.Tests.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="HelpersTests" />
+    <Folder Include="Helpers" />
     <Folder Include="Mocks\" />
     <Folder Include="ApiTests\" />
   </ItemGroup>
