Revert version number change and loglevel in the sample app

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ElasticApm": {
-    "LogLevel": "Debug",
+    "LogLevel": "Error",
     "ServerUrls": "http://localhost:8200",
     "TransactionSampleRate": 1.0
   }
